// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardFooter > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--justify-end rmd-card__footer"
  data-testid="footer"
>
  Footer
</div>
`;

exports[`CardFooter > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--justify-end rmd-card__footer custom-class-name"
  data-testid="footer"
  style="color: white;"
>
  Footer
</div>
`;

exports[`CardFooter > should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--justify-between rmd-card__footer"
  data-testid="footer"
  style=""
>
  Footer
</div>
`;
